--- a/app/partials/products.html
+++ b/app/partials/products.html
@@ -13,7 +13,7 @@
 <div id="products">
 	<ul ng-repeat="item in pageCtrl.activeProducts" id="product">
 		<div>
-			<section>
+			<section id="productImage">
 				<img ng-src="{{item.img}}">
 			</section>
 			<aside class="productInfo">
