--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -14,7 +14,7 @@
         <img alt="Brand" src="./assets/images/logo.gif">
       </a>
 		</div>
-
+						<li id='basketIcon' class="nav navbar-nav navbar-right"><a ng-click="pageCtrl.setBasketShow()" href><span class="glyphicon glyphicon-shopping-cart btn-lg" aria-hidden="true"></span></a></li>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
@@ -23,10 +23,8 @@
 				<li><a href="#footwear">Footwear</a></li>
 				<li><a href="#contact">Contact Us</a></li>
 				<li><a href="#logout">Sign In</a></li>
-				<li><a ng-click="pageCtrl.setBasketShow()" href><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
-
 </nav>
 
