initial template setup

--- a/app/partials/index/navbar.html
+++ b/app/partials/index/navbar.html
@@ -11,18 +11,17 @@
 				<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="#">
-				<img alt="Brand" src="./assets/images/logo.gif">
+				<img alt="Brand" src="./assets/images/logo.png">
 			</a>
 		</div>
-		<li ng-controller="BasketController as basketCtrl" id='basketIcon' class="nav navbar-nav navbar-right"><a ng-click="pageCtrl.setBasketShow()" href>{{basketCtrl.basket.length}}<span class="glyphicon glyphicon-shopping-cart btn-lg" aria-hidden="true"></span></a></li>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="#newIn">New In</a></li>
-				<li><a href="#clothing">Clothing</a></li>
-				<li><a href="#footwear">Footwear</a></li>
-				<li><a href="#contact">Contact Us</a></li>
-				<li><a href="#logout">Sign In</a></li>
+				<li><a href="#aboutUs">About Us</a></li>
+				<li><a href="#ourWork">Our Work</a></li>
+				<li><a href="#clients">Clients</a></li>
+				<li><a href="#news">News</a></li>
+				<li><a href="#contactUs">Contact Us</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
