--- a/app/partials/index/navbar.html
+++ b/app/partials/index/navbar.html
@@ -10,18 +10,16 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">
-				<img alt="Brand" src="./assets/images/logo.png">
-			</a>
+			<a class="navbar-title" href="#">intelligent design</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="#aboutUs">About Us</a></li>
-				<li><a href="#ourWork">Our Work</a></li>
-				<li><a href="#clients">Clients</a></li>
-				<li><a href="#news">News</a></li>
-				<li><a href="#contactUs">Contact Us</a></li>
+				<li><a href="#aboutUs">about us</a></li>
+				<li><a href="#ourWork">our work</a></li>
+				<li><a href="#clients">clients</a></li>
+				<li><a href="#news">news</a></li>
+				<li><a href="#contactUs">contact us</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
