--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -3,6 +3,11 @@ body {
 	color: #616262;
 }
 
+@font-face {
+    font-family: AG-Book;
+    src: url(../fonts/ag-book/AG-Book-Stencil.ttf);
+}
+
 /* Navbar */
 
 .navbar-inverse {
@@ -10,13 +15,11 @@ body {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-	color: #C79D6E;
-	letter-spacing: 2px;
-	font-family: MS Serif4, New York6, serif;
-	font-weight: 100;
-	font-size: 15px;
-	margin-top: 6px;
-	margin-right: 10px;
+    letter-spacing: 1px;
+    font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+    font-weight: 100;
+    font-size: 13px;
+    margin-right: 10px;
 }
 
 .navbar {
@@ -24,17 +27,18 @@ body {
 	border-bottom-width: 0px;
 }
 
-.navbar-brand > img {
-	display: block;
-	height: 40px;
-	margin-top: 5px;
-	margin-left: 20px;
+a.navbar-title {
+    font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+    font-size: 2em;
+    color: rgb(233, 231, 234);
+    letter-spacing: 0px;
+    position: absolute;
+    top: 4px;
+    left: 35px;
+    font-weight: 600;
+    text-decoration: none;
+    outline: none;
 }
-.navbar-brand{
-	padding-top: 0px;
-	padding-bottom: 0px;
-}
-
 
 /*
 
