--- a/app/partials/index/navbar.html
+++ b/app/partials/index/navbar.html
@@ -10,10 +10,10 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-title" href="#">atlantic group</a>
+			<a class="navbar-title" href="#">atlantic</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse nav navbar-nav navbar-right" id="bs-example-navbar-collapse-1">
+		<div class="collapse navbar-collapse nav navbar-nav" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li><a href="#aboutUs">about us</a></li>
 				<li><a href="#ourWork">our work</a></li>
