--- a/assets/stylesheets/aboutUs.css
+++ b/assets/stylesheets/aboutUs.css
@@ -1,134 +1,77 @@
-#companies-container {
-	height: 600px;
-		background-image: url('http://www.atlanticcreative.co.uk/images/img1502wuji.jpg');
-	border-radius: 5px;
+#departments {
+	margin-top: 50px;
+}
+
+.department {
+	position: relative;
+	height: 450px;
 	background-repeat: no-repeat;
-	background-size: 100%;		
+	background-size: cover;
+	background-position: 0px;
 }
 
-#companies-title {
+.depContents {
+	background-color: rgba(51, 51, 51, 0.79);
+	position: relative;
+	padding: 50px 30px;
+	height: inherit;
+	color: white;
+	width: 30%;
 	text-align: center;
-  padding: 15px;
 }
 
-#companies-title > h1 { 
-  font-size: 4em;
-  font-weight: 100;
-  margin: 0;
-  padding: 0;
-  color: #8E8E91;
+.depContents > h3 {
+	margin:30px 0;
 }
 
-#company-card {
-	margin: 0;
-	padding: 0;
-	font-family: futura;
+.department:first-child {
+	background-image: url('../images/Office-Design-Inspiration.jpeg');
 }
 
-#left {
-	cursor: pointer;
-	background-color: rgba(8, 8, 8, 0.8);
-	text-align: center;
-	height: 100px;
-	border-top: 1px solid;
+
+
+#Creative {
+	background-color: rgba(237, 20, 61, 0.79);
+	float: right;
+}
+.department:nth-child(2) {
+	background-image: url('../images/Office-Design-Inspiration.jpeg');
 }
 
-#left h1 {
-	color: #8E8E91;
-    font-size: 4.5em;
-    font-weight: 200;
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    top: 12px;
-    left: 45px;
+
+
+#Print {
+	background-color: rgba(20, 203, 237, 0.79);
+}
+.department:nth-child(3) {
+	background-image: url('../images/Office-Design-Inspiration.jpeg');
 }
 
-#left h1 span {
-	font-size: 25px;
-	font-weight: 100;
-	letter-spacing: 2px;
-	padding-top: 30px;
-	padding-bottom: 5px;
-	margin: 0;
+
+
+#Digital {
+	background-color: rgba(20, 43, 237, 0.79);
+	float: right;
+}
+.department:nth-child(4) {
+	background-image: url('../images/Office-Design-Inspiration.jpeg');
 }
 
-#drop-icon {
-	text-align: center;
-	padding-top: 75px;
+
+
+#Interiors {
+	background-color: rgba(237, 224, 20, 0.79);
+}
+.department:nth-child(5) {
+	background-image: url('../images/Office-Design-Inspiration.jpeg');
 }
 
-#right {
-	border-top: 1px solid;
-	border-bottom: 1px solid;
-	padding: 30px;
-	background-color: rgba(8, 8, 8, 0.8);
-}
 
-#right h4 {
-	color: #B3B3B6;
-	padding-bottom: 10px;
-	letter-spacing: 2px;
-	font-size: 22px;
-	font-weight: 500;
-	font-family: futura;
-}
 
-#right p {
-	margin: 0 0 10px;
-	color: #ccc;
-	word-spacing: 1px;
-	font-family: futura;
-	font-size: 14px;
-	font-weight: 100;
-	letter-spacing: 1px;
+#Shopfit {
+	background-color: rgba(20, 237, 60, 0.79);
+	float: right;
 }
-
-@media screen and (max-width:1000px) {
-	#companies-container {
-		background-image: none;
-	}
-	#right {
-		width: 45%;
-	}
-	#company-card {
-		background-image: url('http://www.atlanticcreative.co.uk/images/img1502wuji.jpg');
-		border-radius: 5px;
-		background-repeat: no-repeat;
-		background-size: 100%;
-	}
-}
-
-@media screen and (max-width:450px) {
-	#companies-container {
-		background-image: none;
-	}
-	#companies-title > h1 { 
-	  font-size: 3em;
-	  left: 5px;
-	}
-	#left h1 span {
-		font-size: 30px;
-	}
-	#left h1  {
-		left: 5px;
-		top: 20px;
-		font-size: 30px;
-	}
-	#left {
-		border-bottom: 1px solid;
-		height: 70px;
-	}
-	#right {
-		border-bottom: 1px solid;
-		padding: 30px;
-		height:100%;
-		width:100%;
-	}
-	#company-card {
-		background-image: url('http://www.atlanticcreative.co.uk/images/img1502wuji.jpg');
-		border-radius: 5px;
-		background-repeat: no-repeat;
-		background-size: 125%;
-	}
+.department:nth-child(6) {
+	background-image: url('../images/Office-Design-Inspiration.jpeg');
 }
