--- a/app/partials/aboutUs/companiesLarge.html
+++ b/app/partials/aboutUs/companiesLarge.html
@@ -1,10 +1,8 @@
 <section id='departments'>
-	<div ng-repeat='company in aboutCtrl.companies'>
-		<div class='department'>
-			<div class='depContents' id='{{company.name}}'>
-				<h3>{{company.name}}</h3>
-				<p>{{company.description}}</p>
-			</div>
+	<div ng-repeat='company in aboutCtrl.companies' class='department'>
+		<div class='depContents' id='{{company.name}}'>
+			<h3>{{company.name}}</h3>
+			<p>{{company.description}}</p>
 		</div>
 	</div>
 </section>
