updated CSS, removed image as background and added into html

--- a/app/partials/aboutUs/companiesLarge.html
+++ b/app/partials/aboutUs/companiesLarge.html
@@ -1,8 +1,11 @@
 <section id='departments'>
 	<div ng-repeat='company in aboutCtrl.companies' class='department'>
-		<div class='depContents' id='{{company.name}}'>
-			<h3>{{company.name}}</h3>
-			<p>{{company.description}}</p>
+		<img ng-src='{{company.imageUrl}}'>
+		<div class='depContentsContainer' id='{{company.name}}'>
+			<div class='depContents'>
+				<h3>{{company.name}}</h3>
+				<p>{{company.description}}</p>
+			</div>
 		</div>
 	</div>
 </section>
