--- a/assets/stylesheets/aboutUs.css
+++ b/assets/stylesheets/aboutUs.css
@@ -6,19 +6,36 @@
 	margin: 20px 0;
 	position: relative;
 	height: 450px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0px;
+}
+
+.department > img {
+  position: absolute;
+  height: 450px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
+
+.depContentsContainer {
+	background-color: rgba(51, 51, 51, 0.79);
+	position: relative;
+	height: inherit;
+	color: white;
+	width: 35%;
+	text-align: center;
 }
 
 .depContents {
-	background-color: rgba(51, 51, 51, 0.79);
-	position: relative;
-	padding: 50px 30px;
-	height: inherit;
-	color: white;
-	width: 30%;
-	text-align: center;
+  position: absolute;
+  color: white;
+  text-align: center;
+  padding: 10px 30px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: table;
 }
 
 .depContents > h3 {
@@ -26,9 +43,8 @@
 }
 
 .department:first-child {
-	background-image: url('../images/why.jpg');
-}
 
+}
 
 
 #Creative {
@@ -36,9 +52,7 @@
 	float: right;
 }
 .department:nth-child(2)  {
-	background-image: url('../images/branding.jpg');
-  background-size: contain;
-  background-position-x: 30%;
+
 }
 
 
@@ -47,9 +61,7 @@
 	background-color: rgba(20, 203, 237, 0.79);
 }
 .department:nth-child(3) {
-	background-image: url('../images/print.png');
-  background-size: contain;
-  background-position-x: 90%;
+
 }
 
 
@@ -59,8 +71,7 @@
 	float: right;
 }
 .department:nth-child(4) {
-	background-image: url('../images/digital.jpg');
-	background-size: 70%;
+
 }
 
 
@@ -69,9 +80,7 @@
 	background-color: rgba(237, 224, 20, 0.79);
 }
 .department:nth-child(5) {
-	background-image: url('../images/muchu_curve.jpg');
-	background-size: 80%;
-  background-position-x: 100%;
+
 }
 
 
@@ -81,6 +90,5 @@
 	float: right;
 }
 .department:nth-child(6) {
-	background-image: url('../images/shopfit.jpg');
-	background-size: 65%
+
 }
