added social media buttons, intro, new images for companies and intro and finished companies and intro styling

--- a/app/partials/index/navbar.html
+++ b/app/partials/index/navbar.html
@@ -22,6 +22,7 @@
 				<li><a href="#contactUs">contact us</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
+		<social-media-icons></social-media-icons>
 	</div><!-- /.container-fluid -->
 </nav>
 
