--- a/assets/stylesheets/aboutUs.css
+++ b/assets/stylesheets/aboutUs.css
@@ -1,94 +1,179 @@
-#departments {
-	margin-top: 50px;
+/* Intro */
+
+#intro  {
+	background-image: url('./../images/intro.gif');
+	background-color: rgba(4, 4, 4, 0.5);
+	margin-top: -56px;
+	height: 495px;
+	padding-top: 1px;
 }
+
+#introContainer {
+	background-color: rgba(0,0,0,0.49);
+	position: relative;
+	margin-top: 55px;
+	height: 439px;
+} 
+
+#introContents {
+	color: white;
+	width: 525px;
+	position: absolute;
+	top: 50px;
+	right: 15%;
+}
+
+#introContents > h1 {
+	font-size: 85px;
+}
+
+#introContents > p {
+	font-size: 18px;
+}
+
+@media screen and (max-width:850px) {
+	#introContents {
+		right: 0;
+		left: 0;
+		margin: auto;
+	}
+}
+
+@media screen and (max-width:560px) {
+	#introContents {
+	  width: 350px;
+	}
+
+	#introContents > h1 {
+	font-size: 55px;
+	}
+
+	#introContents > p {
+		font-size: 14px;
+	}
+}
+
+/* companies */
 
 .department {
-	margin: 20px 0;
 	position: relative;
 	height: 450px;
+	margin-top: 100px;
 }
 
-.department > img {
-  position: absolute;
-  height: 450px;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
+.depImg {
+	position: relative;
+	display: inline-block;
+	width: 65%;
+	height: inherit;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .depContentsContainer {
-	background-color: rgba(51, 51, 51, 0.79);
 	position: relative;
 	height: inherit;
 	color: white;
 	width: 35%;
 	text-align: center;
+	display: inline-block;
+	float: left;
 }
 
 .depContents {
-  position: absolute;
-  color: white;
-  text-align: center;
-  padding: 10px 30px;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  display: table;
+	position: absolute;
+	color: white;
+	text-align: center;
+	padding: 25px 30px;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	display: table;
 }
 
 .depContents > h3 {
-	margin:30px 0;
+	margin:20px 0;
 }
 
-.department:first-child {
-
+.depContents > p {
+	margin: 0 0 10px;
+	letter-spacing: 1px;
+	word-spacing: 0px;
+	line-height: 25px;
+	font-size: 16px;
+	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+	text-align: justify;
 }
-
 
 #Creative {
 	background-color: rgba(237, 20, 61, 0.79);
 	float: right;
 }
-.department:nth-child(2)  {
-
+div.department:nth-child(1) > div.depImg {
+	background-size: contain !important;
 }
-
-
 
 #Print {
 	background-color: rgba(20, 203, 237, 0.79);
 }
-.department:nth-child(3) {
-
+div.department:nth-child(2) > div.depImg {
+	width: 63%;
+	margin-left: 2%;
 }
-
-
 
 #Digital {
-	background-color: rgba(20, 43, 237, 0.79);
+	background-color: rgba(87, 20, 237, 0.79);
 	float: right;
 }
-.department:nth-child(4) {
-
+div.department:nth-child(3) > div.depImg {
+	background-size: contain !important;
 }
-
-
 
 #Interiors {
 	background-color: rgba(237, 224, 20, 0.79);
 }
-.department:nth-child(5) {
-
+div.department:nth-child(4) > div.depImg {
+	width: 63%;
+	margin-left: 2%;
 }
-
-
 
 #Shopfit {
 	background-color: rgba(20, 237, 60, 0.79);
 	float: right;
 }
-.department:nth-child(6) {
+div.department:nth-child(5) > div.depImg {
+	width: 63%;
+	margin-right: 2%;
+}
 
+@media screen and (max-width:970px) {
+	.depContentsContainer {
+		height: 250px;
+		width: 100%;
+		display: block;
+	}
+
+	.depImg {
+		width: 100% !important; 
+		margin: 0 !important;
+		display: block;
+		height: 450px;
+	}
+
+	.department {
+		height: 680px;
+	}
+}
+
+@media screen and (max-width:550px) {
+
+	.depContentsContainer {
+		height: 430px;
+	}
+
+
+	.department {
+		height: 830px;
+		margin-top: 50px;
+	}
 }
