--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -4,11 +4,6 @@ body {
   font-family: futura;
 }
 
-@font-face {
-  font-family: AG-Book;
-  src: url(../fonts/ag-book/AG-Book-Stencil.ttf);
-}
-
 /* Navbar */
 
 
@@ -18,12 +13,15 @@ body {
   font-weight: 100;
   font-size: 13px;
   margin-right: 10px;
+  color: white;
 }
 
 .navbar {
 	margin-bottom: 0px;
 	border-bottom-width: 0px;
   height: 55px;
+  background-color: rgba(4, 4, 4, 0.5);
+  border-bottom: 1px solid white;
 }
 
 .container-fluid > .navbar-header {
@@ -31,9 +29,19 @@ body {
   margin-left: 15%;
 }
 
+.navbar-default .navbar-nav > li > a {
+  color: #DED6D6;
+  letter-spacing: 2px;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+  color: #f5f5f5;
+  background-color: rgba(0, 15, 0, 0.61);
+}
+
 a.navbar-title {
   font-size: 2.5em;
-  color: rgb(108, 107, 108);
+  color: white;
   letter-spacing: 1px;
   font-weight: 100;
   text-decoration: none;
@@ -41,6 +49,66 @@ a.navbar-title {
 }
 
 .navbar-nav {
-    margin-left: 40px;
-    margin-top: 3px;
+  margin-left: 40px;
+  margin-top: 3px;
+}
+
+.navbar-toggle {
+  margin-top: 2px;
+  height: 40px;
+  border-radius: 4;
+  border: 2px solid white;
+
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #f5f5f5;
+}
+
+/* Social Media Icons */
+
+#socialMediaContainer {
+  position: absolute;
+  height: 50px;
+  top: 0;
+  right: 50px; 
+}
+
+.socialBtn {
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+  background-size: cover;
+  border: none;
+  margin: 6px 3px;
+}
+
+.socialBtn:hover {
+  transform: scale(1.1,1.1);
+}
+
+#facebook {
+  background-image: url('./../images/facebook.gif');
+}
+
+#twitter {
+  background-image: url('./../images/twitter.gif');
+}
+
+#pinterest {
+  background-image: url('./../images/pinterest.gif');
+}
+
+@media screen and (max-width:960px) {
+  #socialMediaContainer {
+    top: 70px; 
+    right: 55px;
+  }
+}
+
+@media screen and (max-width:765px) {
+  #socialMediaContainer {
+    top: 0;
+    right: 65px;
+  }
 }
