--- a/app/partials/aboutUs/team.html
+++ b/app/partials/aboutUs/team.html
@@ -1,6 +1,8 @@
 <section id='teamMembers' class="row">
 	<div class='container'>
-	<div ng-repeat='member in aboutCtrl.teamMembers' class='member col-md-4'>
+	<h2>Meet the team...</h2>
+	<div ng-repeat='member in aboutCtrl.teamMembers' class='member col-sn-6 col-md-4'>
+		<div class='memberContainer'>
 		<div class='memImg'>
 			<img ng-src="{{member.imageUrl}}">
 		</div>
@@ -11,5 +13,6 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
 </section>
