--- a/assets/stylesheets/aboutUs.css
+++ b/assets/stylesheets/aboutUs.css
@@ -54,6 +54,9 @@
 }
 
 /* companies */
+#departments {
+	margin-top: 50px;
+}
 
 .department {
 	position: relative;
@@ -125,9 +128,6 @@ div.department:nth-child(2) > div.depImg {
 	background-color: rgba(87, 20, 237, 0.79);
 	float: right;
 }
-div.department:nth-child(3) > div.depImg {
-	background-size: contain !important;
-}
 
 #Interiors {
 	background-color: rgba(237, 224, 20, 0.79);
@@ -182,20 +182,72 @@ div.department:nth-child(5) > div.depImg {
 
 #teamMembers { 
 	margin-top: 50px;
+	background-color: #39E6D2;
+  padding: 50px 0 100px 0;
+}
+
+#teamMembers h2 { 
+	margin-left: 50px;
 }
 
 .member {
 	text-align: center;
 	margin-top: 50px;
+	padding: auto 0;
 }
 
 .memImg {
-
-}
-.memContentsContainer {
-
+  padding: 50px 0;
 }
 
-.memContents {
+.memberContainer  {
+	padding: 50px 0 30px 0;
+  background-color: rgba(24, 25, 25, 0.86);
+  width: 85%;
+  margin: auto;
+	border-radius: 5px;
+}
 
+.memImg > img {
+  width: 60%;
+  border-radius: 100%;
+}
+
+.memContents > h3 {
+	margin: 0;
+	padding: 5px 0;
+	color: #8F8E8D;
+}
+
+.memContents > h4 {
+	padding-bottom: 50px;
+	color: #5E5C59;
+}
+
+@media screen and (min-width:750px) {
+	#teamMembers .col-md-4 {
+	    width: 33.33333333%;
+	    float: left;
+	}
+}
+
+@media screen and (max-width:990px) {
+
+	.memberContainer {
+		padding: 0 ;
+	}
+}
+
+@media screen and (max-width:750px) {
+	.memberContainer {
+	    width: 45%;
+	    padding: 0;
+	}
+}
+
+@media screen and (max-width:550px) {
+	.memberContainer {
+	    width: 70%;
+	    padding-top: 10px;
+	}
 }
