--- a/assets/stylesheets/aboutUs.css
+++ b/assets/stylesheets/aboutUs.css
@@ -252,15 +252,19 @@ div.department:nth-child(5) > div.depImg {
 
 /* Clients */
 
-#clients { 
+#clientsContainer { 
 	margin-top: 50px;
 	background-color: #39E6D2;
-  padding: 50px 0 100px 0;
+  padding: 50px 0;
 }
 
-#clients h2 { 
+#clientsContainer h2 { 
 	margin-left: 50px;
-	padding-bottom: 50px;	
+	padding-bottom: 10px;	
+}
+
+#clients {
+	text-align: center;
 }
 
 .client { 
