added dropdown menu for quick links to team and clients and removed variables from controller, added factory to pull in about us info from flat files

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -40,6 +40,33 @@ body {
   top: -5px;
 }
 
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: white;
+    background-color: rgba(0, 15, 0, 0.61);
+    top: -5px;
+}
+
+.dropdown-menu {
+  background-color: rgb(130, 130, 130);
+  padding: 0;
+}
+
+.dropdown-menu > li > a { 
+  color: #DED6D6;
+  letter-spacing: 2px;
+  line-height: 2.5;
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    color: white;
+    text-decoration: none;
+    background-color: #252E25;
+}
+
+.dropdown-menu .divider {
+  margin: 0; 
+}
+
 a.navbar-title {
   font-size: 2.5em;
   color: white;
