--- a/app/partials/index/navbar.html
+++ b/app/partials/index/navbar.html
@@ -15,14 +15,20 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse nav navbar-nav" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="#aboutUs">about us</a></li>
+				<li class="dropdown">
+          <a href="#aboutUs" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about us<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+						<li><a href="#aboutUs">about us</a></li>
+            <li role="separator" class="divider"></li>
+						<li><a href="#aboutUs#teamMembers">team</a></li>
+            <li role="separator" class="divider"></li>
+						<li><a href="#aboutUs#clientsContainer">clients</a></li>
+          </ul>
+        </li>
 				<li><a href="#ourWork">our work</a></li>
-				<li><a href="#clients">clients</a></li>
-				<li><a href="#news">news</a></li>
 				<li><a href="#contactUs">contact us</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 		<social-media-icons></social-media-icons>
 	</div><!-- /.container-fluid -->
 </nav>
-
