removed hard coded intro and replaced with flat file

--- a/app/partials/aboutUs/intro.html
+++ b/app/partials/aboutUs/intro.html
@@ -1,8 +1,8 @@
-<section id='intro'>
+<section id='intro' style='background-image: url({{aboutCtrl.intro[0].imageUrl}})'>
 	<div id='introContainer'>
 		<div id='introContents'>
 			<h1>atlantic</h1>
-			<p>We consist of five departments each providing innovative solutions in their own specialist areas. We operate independently or work seamlessly to provide you with a full turnkey solution. Specialists in the food and beverage sector, our client base includes some of the country's best known brands.</p>
+			<p>{{aboutCtrl.intro[0].description}}</p>
 		</div>
 	</div>
 </section>
